--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ python-multipart>=0.0.12
 python-dotenv>=1.0.0
 pandas>=2.0.0
 numpy>=1.24.0
+matplotlib>=3.7.0
 
 # Observability
 langfuse>=2.0.0
