--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ build/
 .env.local
 .env*.local
 
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Agents específicos
 newave_agent/data/
 newave_agent/uploads/
